# cdk-aws-lambda-internal-extension

./: .gitattributes  .gitignore  .projenrc.py  README.md  app.py  cdk.json  pyproject.toml
.projen/: deps.json  files.json
cdk_aws_lambda_internal_extension/functions/test/: index.py
cdk_aws_lambda_internal_extension/layers/maintenance-window/: bootstrap.py  wrapper-script
cdk_aws_lambda_internal_extension/layers/maintenance-window/libs/awslambdaric/: bootstrap.py  lambda_pre_handler.py
cdk_aws_lambda_internal_extension/layers/maintenance-window/libs/awslambdaric-2.0.4.dist-info/: RECORD  top_level.txt
cdk_aws_lambda_internal_extension/stacks/: my_stack.py
lambda/functions/maintenance-window-test-lambda/: lambda_function.py
lambda/layers/maintenance-window-layer/: wrapper-script
lambda/layers/maintenance-window-layer/lib/awslambdaric-2.0.4.dist-info/: METADATA
lambda/layers/maintenance-window-layer/lib/simplejson-3.17.2-py3.9.egg-info/: installed-files.txt
stacks/: lambda_internal_extension_stack.py
tests/: test_example.py
